switch to a new version of dependency

--- a/.github/workflows/wf.yaml
+++ b/.github/workflows/wf.yaml
@@ -6,8 +6,8 @@ on:
       - master
 
 jobs:
-  dependaboja:
+  jb:
     runs-on: ubuntu-latest
     steps:
       - name: Dependaboja
-        uses: chivorotkiv/ghaction@master
+        uses: chivorotkiv/ghaction@v0.0.0
