--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -13,6 +13,7 @@ updates:
         update-types:
           - 'version-update:semver-minor'
           - 'version-update:semver-patch'
+          - null
 
   - package-ecosystem: github-actions
     directory: /
@@ -25,6 +26,7 @@ updates:
         update-types:
           - 'version-update:semver-major'
           - 'version-update:semver-patch'
+          - null
 
   - package-ecosystem: github-actions
     directory: /
@@ -37,3 +39,4 @@ updates:
         update-types:
           - 'version-update:semver-major'
           - 'version-update:semver-minor'
+          - null
